# wall-construction-demo

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  SPEC-DEMO-GUI.md  SPEC-DEMO-TDD.md  SPEC-DEMO.md  docker-compose.yml  main.py  manage.py  module_setup.py  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  ruff.toml  start-django.sh  supervisord.conf
apps/profiles/: constants.py  models.py  parsers.py  repositories.py  serializers.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py  0002_add_simulation_fields.py  0003_remove_wallsection_start_position_and_more.py
apps/profiles/services/: aggregators.py  calculators.py  queries.py  simulator.py
apps/profiles/views/: profile_views.py  reporting_views.py  simulation_views.py  simulations.py
config/: urls.py  wsgi.py
config/settings/: base.py  test.py
docs/: SOFTWARE-ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Button.jsx  Input.jsx  SimulationSelector.jsx  Spinner.jsx  WallSegmentGrid.jsx
frontend/src/pages/: Dashboard.jsx  SimulationForm.jsx  SimulationResults.jsx
frontend/src/utils/: api.js  format.js
scripts/: ruff.toml  run_tests.py
tests/: conftest.py  factories.py
tests/api/: __init__.py  test_deployment.py
tests/integration/: test_edge_cases.py  test_profile_api.py  test_simulation_api.py  test_wallsection_api.py
tests/unit/: test_aggregators.py  test_calculators.py  test_models.py  test_parsers.py  test_serializers.py  test_simulator.py
