[project]
name = "demo"
version = "0.1.0"
description = "Demo project for iris.ai integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AMI Team" }
]
dependencies = [
  "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-timeout==2.4.0",
  "mypy==1.18.2",
  "ruff==0.13.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.ruff]
target-version = "py312"
